--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "accounting": "^0.4.1",
+    "axios": "^0.23.0",
     "babel-eslint": "^10.1.0",
     "chart.js": "^2.9.4",
     "depcheck": "^1.3.1",
@@ -40,6 +41,8 @@
     "react-icons": "^4.1.0",
     "react-popper": "^2.2.4",
     "react-redux": "^7.2.2",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-select": "^3.1.1",
     "react-star-ratings": "^2.3.0",
     "react-switch": "^5.0.1",
