--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "next",
     "build": "next build",
     "export": "next build && next export",
-    "start": "next start"
+    "start": "next build && next start"
   },
   "dependencies": {
     "@popperjs/core": "^2.6.0",
