--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
     "react-datetime": "^3.0.4",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.13.1",
+    "react-i18next": "^11.10.0",
+    "i18next": "^20.3.1",
+    "i18next-browser-languagedetector": "^6.1.1",
+    "i18next-http-backend": "^1.2.6",
     "react-icons": "^4.1.0",
     "react-popper": "^2.2.4",
     "react-redux": "^7.2.2",
