--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "faker": "^5.1.0",
-    "i18next": "^20.6.1",
+    "i18next": "^20.3.1",
     "i18next-browser-languagedetector": "^6.1.1",
     "i18next-http-backend": "^1.2.6",
     "madge": "^3.12.0",
     "moment": "^2.29.1",
-    "next": "10.0.3",
+    "next": "^11.1.2",
     "nprogress": "^0.2.0",
     "postcss-import": "^14.0.0",
     "prop-types": "^15.7.2",
@@ -41,7 +41,7 @@
     "react-datetime": "^3.0.4",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.13.1",
-    "react-i18next": "^11.12.0",
+    "react-i18next": "^11.10.0",
     "react-icons": "^4.1.0",
     "react-popper": "^2.2.4",
     "react-redux": "^7.2.2",
