--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "next",
     "build": "next build",
     "export": "next build && next export",
-    "start": "next build && next start"
+    "start": "next build && cross-env NODE_ENV=production next"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -32,6 +32,8 @@
     "i18next": "^20.3.1",
     "i18next-browser-languagedetector": "^6.1.1",
     "i18next-http-backend": "^1.2.6",
+    "jspdf": "^2.4.0",
+    "jspdf-autotable": "^3.5.23",
     "madge": "^3.12.0",
     "moment": "^2.29.1",
     "next": "^11.1.2",
